Jenkins DSL: Add XMLBeans-JDK-12, still disabled, though Print out where we get Ant from Use new 'jenkins' target for XMLBeans and fetch compiler warnings and JUnit results
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1854720 13f79535-47bb-0310-9956-ffa450edef68